src/Volumenzeit/Components/WatchDesignSteps/style.css
/* Default: Vertical Layout (Mobile) */
.step-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  margin: 20px 0;
}

.step {
  position: relative;
  text-align: center;
  margin-bottom: 150px;
  font-family: 'Space Age';
  font-size: 32px;
}

.step::before {
  content: "";
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 80px;
  height: 80px;
  border-radius: 50%;
  border: 1px solid #8e7dff;
  z-index: 1;
}

.step .circle-inner {
  position: absolute;
  top: 15px;
  left: 50%;
  transform: translateX(-50%);
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: #745dff;
  border: 1px solid white;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 2;
  font-size: 32px;
  font-weight: 400;
  color: white;
}

/* Vertical line between steps */
.step::after {
  content: "";
  position: absolute;
  top: 80px;
  left: 50%;
  transform: translateX(-50%);
  width: 1px;
  height: 50px;
  background: white;
  z-index: 20;
}

.step:last-child::after{
  display: none !important;
}

.step p {
  margin-top: -20px;
  font-size: 12px;
  font-weight: 200;
  z-index: 50;
  font-family: 'poppins';
}


/* --------------------------
   Horizontal layout: from 768px up
---------------------------- */
@media (min-width: 768px) {
  .step-container {
    flex-direction: row;
    justify-content: center;
    gap: 150px;
    align-items: flex-start;

  }

  .step {
    margin-bottom: 0;
  }

  /* Horizontal line between steps */
  .step::after {
    top: 40px;
    left: calc(50% + 50px);
    transform: none;
    width: calc(100% + 100px);
    height: 1px;
    background: white;
  }

  .step:last-child::after {
    display: none !important;
  }
  

  .step::before {
    left: 50%;
    transform: translateX(-50%);
  }

  .step .circle-inner {
    top: 15px;
  }

  .step p {
    margin-top: 100px;
    font-family: 'poppins';
  }
}

